[package]
authors = ["Scott Godwin <sgodwincs@gmail.com>"]
build = "build.rs"
categories = ["parsing"]
description = "A WebIDL parser"
homepage = "https://github.com/sgodwincs/webidl-rs"
keywords = ["webidl", "idl"]
license = "MIT"
name = "webidl"
readme = "README.md"
repository = "https://github.com/sgodwincs/webidl-rs"
version = "0.7.0"
exclude = ["tests/*.zip"]

[build-dependencies]
lalrpop = "0.15"

[dependencies]
lalrpop-util = "0.15"

[dependencies.clippy]
optional = true
version = "0.0.165"

[dev-dependencies]
zip = "0.2.6"

[features]
default = []
